ingress/ingress-registrierung.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registrierung-service-ingress
spec:
  routes:
    - match: PathPrefix(`/registrierung`)
      kind: Rule
      middlewares:
        - name: test-stripprefix
      services:
        - name: registrierung-service
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /registrierung
